--- a/S07T01.ipynb
+++ b/S07T01.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
        "max     67.100000                  2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +354,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -533,16 +533,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f5040ee72b0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f5040431360>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -569,16 +569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f503fbcff70>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f503f608df0>"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -605,16 +605,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f504d1dae30>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f503f3fd240>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -647,16 +647,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f50483a0130>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f503ff91a50>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -688,21 +688,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    148\n",
-       "1     85\n",
-       "2    183\n",
-       "3     89\n",
-       "4    137\n",
-       "Name: Glucose, dtype: int64"
+       "<seaborn.axisgrid.FacetGrid at 0x7f5042077b80>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -727,16 +722,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f5043b77dc0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f5048369420>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -761,16 +756,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f5043443fa0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f503f5bca00>"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -803,16 +798,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f503ffd9690>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f50434b03a0>"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -838,16 +833,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f504ca35600>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f5043b74d60>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -875,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1628,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1811,7 +1806,7 @@
        "Outcome                   0.238356  1.000000  "
       ]
      },
-     "execution_count": 129,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1822,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1848,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1882,7 +1877,7 @@
        "<AxesSubplot:xlabel='SkinThickness', ylabel='Count'>"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1913,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -1939,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -1963,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -2004,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -2018,10 +2013,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f50434b2e30>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f503f07a6e0>"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     },
