--- a/S07T01.ipynb
+++ b/S07T01.ipynb
@@ -1123,6 +1123,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_glucose' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mdf_glucose\u001b[49m\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m      3\u001b[0m fig, axs \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(nrows\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m, ncols\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m4\u001b[39m))\n\u001b[0;32m      5\u001b[0m axs[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mhist(datos, bins\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m30\u001b[39m, density\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, color\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m#3182bd\u001b[39m\u001b[38;5;124m'\u001b[39m, alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.5\u001b[39m, label \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmuestra_1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_glucose' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "data = df_glucose.copy()\n",
+    "\n",
+    "fig, axs = plt.subplots(nrows=1, ncols=2, figsize=(10, 4))\n",
+    "\n",
+    "axs[0].hist(datos, bins=30, density=True, color='#3182bd', alpha=0.5, label = 'muestra_1')\n",
+    "axs[0].plot(datos, np.full_like(datos, -0.001), '|k', markeredgewidth=1)\n",
+    "axs[0].set_title('Distribución de valores observados')\n",
+    "axs[0].set_xlabel('valor')\n",
+    "axs[0].set_ylabel('densidad')\n",
+    "\n",
+    "pd.Series(datos).plot.kde(ax=axs[1],color='#3182bd')\n",
+    "axs[1].plot(datos, np.full_like(datos, 0), '|k', markeredgewidth=1)\n",
+    "axs[1].set_title('Distribución densidad estimada')\n",
+    "axs[1].set_xlabel('valor')\n",
+    "axs[1].set_ylabel('densidad')\n",
+    "\n",
+    "fig.tight_layout();"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
